--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
